# aishell

./: .coordination-status.json  .coverage  .env.example  .eslintrc.json  .gitignore  .gitignore.logs  .npmignore  .npmrc.template  .pypirc.template  .state  CHANGELOG.md  CHANGELOG_V1.md  CLAUDE.md  COGNITIVE_INTEGRATION_SUMMARY.txt  CONTRIBUTING.md  DATABASE_TEST_RESULTS.md  ENHANCED_DASHBOARD_COMPLETE.txt  EXAMPLES_DELIVERED.md  FAISS_QUICK_REFERENCE.md  FAISS_UPGRADE_COMPLETE.md  FINAL_STATUS.md  GA-RELEASE-CHECKLIST.md  GA-RELEASE-SUMMARY.txt  GA_RELEASE_DOCUMENTATION_SUMMARY.md  HIVE-MIND-COMPLETE-SESSION-SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LOGGING_MIGRATION_COMPLETE.md  MANIFEST.in  MCP_CLIENTS_COMPLETION_SUMMARY.md  NPM-PUBLISH-BLOCKERS.md  P3_TEST_SUMMARY.txt  PHASE1_SUMMARY.md  PHASE2_COMPLETION_REPORT.md  QUERY-CACHE-COMPRESSION-SUMMARY.md  QUICK_START.md  README.md  RELEASE-NOTES-v1.0.0.md  SECURITY-CLI-IMPLEMENTATION-SUMMARY.md  SECURITY-CLI-SUMMARY.md  (+25 more)
.aishell/: slack-integration-complete.txt
.github/: CODEOWNERS  README.md  dependabot.yml  pull_request_template.md
.hive-mind/: config.json  hive.db-shm  hive.db-wal
.swarm/: CODE_REVIEW_REPORT.md  coverage_gap_analysis.json  review-report.json  test-coverage-report.json  tester-results.json  tester-status.json  testing-strategy.md
.vault/: .vault_salt  credentials.vault
aishell.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
community/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
config/: ai-shell-config.yaml  features.config.json
docker/: .env.test  .gitignore  EXTERNAL_MYSQL_SETUP.md  EXTERNAL_ORACLE_SETUP.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  cleanup.sh  docker-compose.test.yml  health-check.sh  run-integration-tests.sh  run-tests.sh  start.sh  test-connections.sh  test-runner.sh
docs/: AIShell.md  ALIAS_README.md  API_REFERENCE.md  ARCHITECTURE.md  CI_CD_GUIDE.md  CLI_INTEGRATION_COMPLETE.md  CLI_REFERENCE.md  CLI_WRAPPER_IMPLEMENTATION.md  CLI_WRAPPER_QUICK_START.md  CLI_WRAPPER_USAGE.md  COGNITIVE_FEATURES.md  COMMAND_CHEATSHEET.md  COMPLETE_IMPLEMENTATION_REPORT.md  COMPREHENSIVE_TUTORIAL_PLAN.md  CONSOLIDATION_ARCHITECTURE.md  COVERAGE_PROGRESS_REPORT.md  CURRENT_STATE_ASSESSMENT.md  DBA_PRESENTATION_SLIDES.md  DOCUMENTATION-MAP.md  DOCUMENTATION_COMPLETE.md  DOCUMENTATION_CORRECTIONS_SUMMARY.md  DOCUMENTATION_GENERATION_REPORT.md  DOCUMENTATION_HEALTH_REPORT.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_INDEX_COMPLETE.md  DOCUMENTATION_MIGRATION_GUIDE.md  DOCUMENTATION_REORGANIZATION_SUMMARY.md  DOCUMENTATION_SUMMARY.md  DOCUMENTED_FEATURES_ANALYSIS.md  ERROR-SUMMARY.md  FAISS_INTEGRATION_COMPLETE.md  FAISS_UPGRADE_NOTES.md  FAISS_USAGE_ANALYSIS.md  FAQ.md  FEATURES_GUIDE.md  FEATURE_ANALYSIS_SUMMARY.md  FEATURE_GAP_ANALYSIS_REPORT.md  FEATURE_PROPOSALS.md  FINAL_IMPLEMENTATION_REPORT.md  FORMATTERS-IMPLEMENTATION-SUMMARY.md  (+94 more)
examples/: EXAMPLES_SUMMARY.md  INDEX.md  QUICK_START.md  README.md  cli-wrapper-demo.ts  cognitive_integration_example.py  command_preview_demo.py  database-connection-examples.ts  federation-demo.ts  formatters-demo.ts  llm-usage-example.ts  pattern-detection-usage.ts  query-cache-compression-demo.ts  query-explainer-examples.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_0618756b1ff51bca___init___py.html  z_0618756b1ff51bca_ai_shell_py.html  z_0618756b1ff51bca_config_py.html  z_0618756b1ff51bca_event_bus_py.html  z_0618756b1ff51bca_health_checks_py.html  z_0d83bcd8ce2f8e13___init___py.html  z_0d83bcd8ce2f8e13_dynamic_panel_container_py.html  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_main_py.html  z_1bd020a122ccd7f9___init___py.html  z_1bd020a122ccd7f9_embeddings_py.html  z_1bd020a122ccd7f9_manager_py.html  z_1bd020a122ccd7f9_providers_py.html  z_26f5c27cd383ad03___init___py.html  z_26f5c27cd383ad03_context_suggestion_py.html  z_276c81cb0f9851cf___init___py.html  z_276c81cb0f9851cf_command_sanitizer_py.html  z_276c81cb0f9851cf_error_handler_py.html  z_276c81cb0f9851cf_path_validator_py.html  z_276c81cb0f9851cf_rate_limiter_py.html  z_276c81cb0f9851cf_redaction_py.html  z_276c81cb0f9851cf_temp_file_handler_py.html  z_276c81cb0f9851cf_vault_py.html  z_27855805fc8760e9___init___py.html  z_27855805fc8760e9_command_preview_py.html  z_27855805fc8760e9_risk_indicator_py.html  z_27855805fc8760e9_suggestion_list_py.html  z_332b7482dee34e6b___init___py.html  z_332b7482dee34e6b_manager_mock_py.html  z_332b7482dee34e6b_manager_py.html  z_389e8694e2fd9880___init___py.html  z_389e8694e2fd9880_backup_py.html  z_389e8694e2fd9880_migration_py.html  z_389e8694e2fd9880_optimizer_py.html  z_4bdfc214c9631d8c___init___py.html  z_4bdfc214c9631d8c_resource_quota_py.html  (+73 more)
marketplace/: registry.json
memory/: claude-flow@alpha-data.json  memory-store.json
migrations/: add_performance_indexes.sql
python-package/: .gitignore  MANIFEST.in  QUICK_START.md  README.md  pyproject.toml  setup.py
python-package/ai_shell_py/: __init__.py
python-package/ai_shell_py/mcp_clients/: __init__.py
python-package/scripts/: build-python.sh  publish-python.sh  test-install.sh
scripts/: analyze-broken-links.py  check-flaky-tests.sh  check-links.sh  check-version-consistency.sh  check_links.py  doc-audit.py  fix-slack-tests-auto.sh  fix_broken_docstrings.py  fix_types.py  generate-progress-report.js  prepublish.sh  publish.sh  setup-test-dbs.sh  start-web-ui.sh  teardown-test-dbs.sh  test-monitor.sh  test-summary.sh  update-version.sh  validate-agent-work.sh  validate-production.sh  verify_faiss.py
src/: __init__.py  main.py
templates/: cli-command-template.ts  cli-command-test-template.ts
tests/: .coveragerc  ASYNC_TESTS_SUMMARY.md  COMPREHENSIVE_TEST_REPORT.md  FAISS_INTEGRATION_TEST_REPORT.md  FINAL_EXECUTION_SUMMARY.md  FINAL_SUMMARY.md  PROGRESS_REPORT.md  README.md  RUN_ORACLE_TESTS.sh  TEST_COVERAGE_SUMMARY_CONFIG_MAIN.md  TEST_SUMMARY_POSTGRESQL.md  conftest.py  coverage_report.json  jest.config.js  package.json  pytest.ini  setup.ts  test-coverage-summary.md  (+19 more)
(+1382 files in other folders)
