[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-aishell"
version = "2.0.0"
description = "Agentic AI-powered database management CLI with local LLMs and MCP integration"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "AIShell Contributors", email = "aishell@example.com"}
]
maintainers = [
    {name = "AIShell Contributors", email = "aishell@example.com"}
]
keywords = [
    "ai", "database", "cli", "llm", "mcp", "postgresql", "mysql",
    "oracle", "mongodb", "automation", "agent", "textual"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

dependencies = [
    # Core async & utilities
    "aiofiles==25.1.0",
    "asyncio-mqtt==0.16.2",
    "psutil==7.1.3",

    # CLI & UI
    "textual==6.6.0",
    "rich==14.2.0",
    "prompt-toolkit==3.0.52",

    # Configuration
    "pyyaml==6.0.3",
    "python-dotenv==1.2.1",

    # Database drivers
    "asyncpg==0.30.0",
    "aiomysql==0.3.2",
    "oracledb==3.4.1",
    "motor==3.7.1",
    "redis==7.0.1",

    # Vector & ML
    "faiss-cpu==1.13.0",
    "numpy==2.0.2",
    "sentence-transformers==5.1.2",

    # LLM integration
    "openai==2.8.0",
    "anthropic==0.73.0",
    "ollama==0.6.1",

    # Security
    "cryptography==46.0.3",
    "pydantic==2.12.4",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "black==23.12.1",
    "ruff==0.1.9",
    "mypy==1.8.0",
]

docs = [
    "sphinx==7.4.7",
    "sphinx-rtd-theme==3.0.2",
    "sphinx-autodoc-typehints==2.3.0",
]

all = [
    "agentic-aishell[dev,docs]",
]

[project.urls]
Homepage = "https://github.com/yourusername/AIShell"
Documentation = "https://aishell.readthedocs.io"
Repository = "https://github.com/yourusername/AIShell"
Issues = "https://github.com/yourusername/AIShell/issues"
Changelog = "https://github.com/yourusername/AIShell/blob/main/CHANGELOG.md"

[project.scripts]
agentic-aishell = "src.main:main"
aishell = "src.main:main"
ai-shell = "src.main:main"

[tool.setuptools]
package-dir = {"" = "."}
packages = {find = {where = ["."], include = ["src*"]}}

[tool.setuptools.package-data]
src = ["py.typed", "**/*.yaml", "**/*.json"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "A", "COM", "C4", "DTZ", "T10", "ISC", "ICN", "PIE", "PT", "Q", "RSE", "RET", "SIM", "TID", "TCH", "ARG", "PLE", "PLR", "PLW", "RUF"]
ignore = ["ANN101", "ANN102", "ANN401", "PLR0913", "PLR2004"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
